Allow user to get both roast and praise

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -494,6 +494,10 @@ header {
                 margin-top: 1rem;
                 font-family: Azeret Mono, monospace;
 
+                &.alt {
+                    background: $light2;
+                }
+
                 &.is-small {
                     width: auto;
                     margin: 0 !important;
