--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -483,7 +483,8 @@ header {
                 letter-spacing: 0.02em;
                 color: #1A2A60;
                 font-family: Azeret Mono, monospace;
-                width: 20%;
+                width: 12rem;
+                margin-right: 1rem;
             }
 
             .button {
@@ -500,14 +501,17 @@ header {
 
                 &.is-small {
                     width: auto;
-                    margin: 0 !important;
+                    margin: 0 1rem 0 0 !important;
                     padding: 0.5rem !important;
                     min-height: 5rem;
                     border-radius: 0.1rem;
-                    background: $gold;
-                    color: $dark2;
                     min-height: 2rem;
                     font-size: 1rem !important;
+                }
+
+                &#submitName {
+                    background: $gold;
+                    color: $dark2;
                 }
             }
         }
